--- a/app/src/main/res/layout/poster_landscape_item.xml
+++ b/app/src/main/res/layout/poster_landscape_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-<data>
-    <variable
-        name="progress"
-        type="Integer" />
-    <variable
-        name="playlistItem"
-        type="me.vipa.app.beanModelV3.uiConnectorModelV2.EnveuVideoItemBean" />
-</data>
+    <data>
+        <variable
+            name="progress"
+            type="Integer" />
+        <variable
+            name="playlistItem"
+            type="me.vipa.app.beanModelV3.uiConnectorModelV2.EnveuVideoItemBean" />
+    </data>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,83 +32,136 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/NontonSize95">
 
-            <ImageView
-                android:id="@+id/itemImage"
-                android:layout_width="@dimen/NontonSize180"
-                android:layout_height="@dimen/NontonSize120"
-                android:contentDescription="TODO"
-                android:scaleType="fitXY"
-                android:src="@drawable/placeholder_potrait" />
-
-            <LinearLayout
-                android:id="@+id/llContinueProgress"
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_alignParentBottom="true"
-                android:layout_height="match_parent"
-                android:visibility="visible">
-
-
-                <RelativeLayout
+                <ImageView
+                    android:id="@+id/itemImage"
                     android:layout_width="@dimen/NontonSize180"
-                    android:layout_height="@dimen/NontonSize93">
+                    android:layout_height="@dimen/NontonSize120"
+                    android:contentDescription="TODO"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/placeholder_landscape" />
+
+                <LinearLayout
+                    android:id="@+id/llContinueProgress"
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_alignParentBottom="true"
+                    android:layout_height="match_parent"
+                    android:visibility="gone">
+
+
+                    <RelativeLayout
+                        android:layout_width="@dimen/NontonSize180"
+                        android:layout_height="@dimen/NontonSize93">
+
+                        <ImageView
+                            android:layout_centerInParent="true"
+                            android:layout_width="@dimen/NontonSize30"
+                            android:layout_height="@dimen/NontonSize30"
+                            android:background="@drawable/play_icon_ios"
+                            android:contentDescription="TODO"
+                            android:scaleType="fitXY" />
+
+
+                    </RelativeLayout>
+
+
+                    <SeekBar
+                        android:id="@+id/progressBar"
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_gravity="bottom"
+                        android:background="@color/bottom_navigation_bg_dark"
+                        android:minHeight="0dp"
+                        android:paddingStart="0dp"
+                        android:paddingEnd="0dp"
+                        android:paddingBottom="0dp"
+                        android:progressDrawable="@drawable/progress_background"
+                        android:thumb="@color/gray"
+                        android:thumbTint="@android:color/transparent"
+                        tools:targetApi="lollipop"
+                        android:progress="@{progress}"
+                        android:elevation="10dp"/>
+                </LinearLayout>
+
+                <FrameLayout
+                    android:id="@+id/flNew"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="-2dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:visibility="gone">
 
                     <ImageView
-                        android:layout_centerInParent="true"
-                        android:layout_width="@dimen/NontonSize30"
-                        android:layout_height="@dimen/NontonSize30"
-                        android:background="@drawable/play_icon_ios"
-                        android:contentDescription="TODO"
-                        android:scaleType="fitXY" />
+                        android:layout_width="@dimen/vip_badge_width"
+                        android:layout_height="@dimen/vip_badge_height"
+                        android:src="@{playlistItem.newSeriesImageDrawable, default=@drawable/series_icon_120}"
+                        tools:ignore="ContentDescription"/>
+                </FrameLayout>
 
-
-                </RelativeLayout>
-
-
-                <SeekBar
-                    android:id="@+id/progressBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                <FrameLayout
+                    android:id="@+id/flNewMovie"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="-2dp"
+                    android:layout_marginTop="@dimen/NontonSize55"
                     android:layout_alignParentBottom="true"
-                    android:layout_gravity="bottom"
-                    android:background="@color/bottom_navigation_bg_dark"
-                    android:minHeight="0dp"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="0dp"
-                    android:paddingBottom="0dp"
-                    android:progressDrawable="@drawable/progress_background"
-                    android:thumb="@color/gray"
-                    android:thumbTint="@android:color/transparent"
-                    tools:targetApi="lollipop"
-                    android:progress="@{progress}"
-                    android:elevation="10dp"/>
-            </LinearLayout>
+                    android:layout_alignParentRight="true"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:layout_width="@dimen/vip_badge_width"
+                        android:layout_height="@dimen/vip_badge_height"
+                        android:src="@{playlistItem.newMoviesDrawable, default=@drawable/new_movie_120}"
+                        tools:ignore="ContentDescription"/>
+                </FrameLayout>
 
             </RelativeLayout>
 
 
             <RelativeLayout
-                android:layout_width="match_parent"
+                android:id="@+id/titleLayout"
+                android:layout_width="@dimen/NontonSize100"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:visibility="gone">
 
-                <TextView
-                    android:id="@+id/tvTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginTop="@dimen/_30sdp"
-                    android:background="@drawable/above_shado"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/sukhumvittadmai_normal"
-                    android:gravity="left"
-                    android:maxLines="1"
-                    android:paddingLeft="@dimen/_5sdp"
-                    android:paddingBottom="@dimen/_10sdp"
-                    android:text="Gadis"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_11sdp" />
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tvTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/NontonSize95"
+                        android:ellipsize="end"
+                        android:gravity="left"
+                        android:maxLines="1"
+                        android:visibility="gone"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
+                        android:paddingTop="@dimen/NontonSize2"
+                        android:paddingLeft="@dimen/_3sdp"
+                        android:textColor="?attr/watchlist_item_title_color"
+                        android:textSize="@dimen/_11sdp" />
+
+                    <TextView
+                        android:id="@+id/tvDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:gravity="left"
+                        android:maxLines="1"
+                        android:visibility="gone"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
+                        android:paddingLeft="@dimen/_3sdp"
+                        android:paddingBottom="@dimen/_2sdp"
+                        android:textColor="?attr/watchlist_item_title_color"
+                        android:textSize="@dimen/_9sdp" />
+
+
+                </LinearLayout>
 
             </RelativeLayout>
 
@@ -148,35 +201,6 @@
             </FrameLayout>
 
 
-            <FrameLayout
-                android:id="@+id/flNew"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="-2dp"
-                android:layout_gravity="end|bottom"
-                android:visibility="gone">
-
-                <ImageView
-                    android:layout_width="@dimen/vip_badge_width"
-                    android:layout_height="@dimen/vip_badge_height"
-                    android:src="@{playlistItem.newSeriesImageDrawable, default=@drawable/series_icon_120}"
-                    tools:ignore="ContentDescription"/>
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/flNewMovie"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="-2dp"
-                android:layout_gravity="end|bottom"
-                android:visibility="gone">
-
-                <ImageView
-                    android:layout_width="@dimen/vip_badge_width"
-                    android:layout_height="@dimen/vip_badge_height"
-                    android:src="@{playlistItem.newMoviesDrawable, default=@drawable/new_movie_120}"
-                    tools:ignore="ContentDescription"/>
-            </FrameLayout>
 
             <ImageView
                 android:id="@+id/ivContinuePlay"
