--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -212,8 +212,55 @@
                     android:layout_marginEnd="10dp"
                     android:gravity="center"
                     android:theme="@style/SwitchTheme"
-                    app:layout_constraintRight_toRightOf="parent"
                     />
+
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/toolbarBackLeft"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/bingeWatch"
+                android:layout_width="wrap_content"
+                android:background="@drawable/video_icon"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/binge_setting"
+                android:fontFamily="@font/sukhumvittadmai_normal"
+                android:textSize="@dimen/font_medium_large"
+                android:layout_marginLeft="@dimen/NontonSize15"
+                android:paddingRight="@dimen/NontonSize10"
+                android:textColor="?attr/change_language_text"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/bingeWatch"/>
+
+
+
+
+
+
+
+
+            <Switch
+                android:id="@+id/binge_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="64dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="10dp"
+                android:gravity="center"
+                android:theme="@style/SwitchTheme"
+                />
 
 
 
