--- a/brightcovelibrary/src/main/res/layout/fragment_player_controls.xml
+++ b/brightcovelibrary/src/main/res/layout/fragment_player_controls.xml
@@ -239,10 +239,20 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/skip_duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/videobackicon"
+                    android:text=""
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="14dp" />
 
                 <TextView
                     android:id="@+id/bingeTxt"
                     android:text="@string/next_episode"
+                    android:layout_marginLeft="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
