--- a/app/src/main/res/layout/episode_screen.xml
+++ b/app/src/main/res/layout/episode_screen.xml
@@ -78,6 +78,14 @@
                     android:scaleType="fitXY"
                     android:src="@drawable/placeholder_landscape"/>
 
+                <ImageView
+                    android:id="@+id/play_icon"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/play_icon_ios"
+                    android:visibility="gone"/>
+
                 <me.vipa.app.utils.CustomProgressBar
                     android:id="@+id/pBar"
                     style="@style/Widget.AppCompat.ProgressBar"
