--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -178,7 +178,7 @@
             <ImageView
                 android:id="@+id/noti"
                 android:layout_width="wrap_content"
-                android:background="@drawable/video_icon"
+                android:background="@drawable/noti_icon"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerInParent="true"/>
