--- a/brightcovelibrary/src/main/res/layout/player_seekbar_layout.xml
+++ b/brightcovelibrary/src/main/res/layout/player_seekbar_layout.xml
@@ -4,6 +4,19 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal">
+    <TextView
+        android:id="@+id/tag"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="24dp"
+        android:textColor="#FFF"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:text="@string/live"
+        android:background="#F23338"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@id/exo_position"
