--- a/app/src/main/res/layout-sw600dp-land/new_password_screen.xml
+++ b/app/src/main/res/layout-sw600dp-land/new_password_screen.xml
@@ -60,21 +60,26 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-
-                        <EditText
-                            android:id="@+id/etNewPassword"
+                        <ImageView
+                            android:id="@+id/lock_icon"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
-                            android:layout_marginRight="@dimen/_5sdp"
-                            android:layout_toLeftOf="@+id/radioPasswordEye"
+                            android:contentDescription="TODO"
+                            android:padding="@dimen/NontonSize1"
+                            android:src="?attr/lock_icon" />
+                        <EditText
+                            android:id="@+id/etNewPassword"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="@dimen/NontonSize30"
+                            android:layout_marginRight="@dimen/NontonSize30"
                             android:background="@null"
                             android:fontFamily="@font/sukhumvittadmai_normal"
                             android:hint="@string/new_password"
                             android:inputType="textPassword|textNoSuggestions"
                             android:maxLength="20"
-                            android:paddingLeft="@dimen/_5sdp"
-                            android:paddingRight="@dimen/_5sdp"
                             android:singleLine="true"
                             android:textColor="?attr/app_edit_text_color"
                             android:textColorHint="?attr/app_edit_text_color"
@@ -113,12 +118,20 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-
+                        <ImageView
+                            android:id="@+id/lock_icon1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:contentDescription="TODO"
+                            android:padding="@dimen/NontonSize1"
+                            android:src="?attr/lock_icon" />
                         <EditText
                             android:id="@+id/etConfirmNewPassword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@null"
+                            android:layout_marginLeft="@dimen/NontonSize30"
                             android:fontFamily="@font/sukhumvittadmai_normal"
                             android:hint="@string/confirm_password"
                             android:inputType="textPassword|textNoSuggestions"
