--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -73,21 +73,38 @@
                         android:textSize="@dimen/TextSize14"
                         android:textStyle="bold" />
 
+                              <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/NontonSize35"
+                                android:orientation="horizontal"
+                                android:paddingBottom="@dimen/NontonSize2">
 
-                    <EditText
+                                  <ImageView
+                                      android:layout_width="wrap_content"
+                                      android:layout_height="wrap_content"
+                                      android:layout_gravity="center"
+                                      android:contentDescription="TODO"
+                                      android:padding="@dimen/NontonSize4"
+                                      android:src="?attr/email_icon_background"
+                                      />
+
+
+                                  <EditText
                         android:id="@+id/etPasswordRecoveryEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_35sdp"
                         android:background="@null"
                         android:fontFamily="@font/sukhumvittadmai_normal"
                         android:hint="@string/email"
                         android:lineHeight="@dimen/_30sdp"
                         android:maxLength="30"
+                                      android:layout_marginTop="@dimen/NontonSize5"
                         android:singleLine="true"
                         android:textColor="?attr/app_edit_text_color"
                         android:textColorHint="?attr/app_edit_text_color"
                         android:textSize="@dimen/TextSize14" />
+                              </LinearLayout>
 
                     <View
                         android:layout_width="match_parent"
