--- a/app/src/main/res/layout-sw600dp-land/signup_activity.xml
+++ b/app/src/main/res/layout-sw600dp-land/signup_activity.xml
@@ -329,7 +329,7 @@ android:textColorHint="?attr/app_edit_text_color"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:buttonTint="@color/white"
-                                android:layout_gravity="center"
+                                android:layout_gravity="left"
                                 android:layout_marginLeft="@dimen/NontonSize10"
                                 android:layout_marginRight="@dimen/NontonSize10"
                                 android:checked="false"
