--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -338,7 +338,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:buttonTint="@color/white"
-                                android:layout_gravity="center"
+                                android:layout_gravity="left"
                                 android:layout_marginLeft="@dimen/NontonSize10"
                                 android:layout_marginRight="@dimen/NontonSize10"
                                 android:checked="false"
