--- a/app/src/main/res/drawable/delete_icon.xml
+++ b/app/src/main/res/drawable/delete_icon.xml
@@ -8,6 +8,6 @@
     <path
         android:pathData="M0 0h24v24H0V0z" />
     <path
-        android:fillColor="#009FFF"
+        android:fillColor="#ffff"
         android:pathData="M6 19c0 1.1 0.9 2 2 2h8c1.1 0 2-0.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4z" />
 </vector>
