--- a/app/src/main/res/layout/activity_series_detail.xml
+++ b/app/src/main/res/layout/activity_series_detail.xml
@@ -246,7 +246,7 @@
                                         android:maxLines="2"
                                         android:text="@{responseApi.trim()}"
                                         android:textColor="?attr/title_color"
-                                        android:textSize="@dimen/font_small" />
+                                        android:textSize="@dimen/font_xsmall" />
 
                                     <me.vipa.app.utils.helpers.ExpandableCardLayout
                                         android:id="@+id/expandable_layout"
