--- a/app/src/main/res/layout/detail_screen.xml
+++ b/app/src/main/res/layout/detail_screen.xml
@@ -270,7 +270,7 @@
                                     android:maxLines="2"
                                     android:text="@{responseApi.description.trim()}"
                                     android:textColor="?attr/title_color"
-                                    android:textSize="@dimen/font_small" />
+                                    android:textSize="@dimen/font_xsmall" />
 
                                 <me.vipa.app.utils.helpers.ExpandableCardLayout
                                     android:id="@+id/expandable_layout"
