--- a/app/src/main/res/layout/live_detail.xml
+++ b/app/src/main/res/layout/live_detail.xml
@@ -306,7 +306,7 @@
                                     android:lineSpacingExtra="2dp"
                                     android:text="@{responseApi.description.trim()}"
                                     android:textColor="?attr/title_color"
-                                    android:textSize="@dimen/font_small" />
+                                    android:textSize="@dimen/font_xsmall" />
 
 
                                 <LinearLayout
