--- a/app/src/main/res/layout/row_episode_list.xml
+++ b/app/src/main/res/layout/row_episode_list.xml
@@ -179,7 +179,7 @@
                         android:fontFamily="@font/sukhumvittadmai_bold"
                         android:maxLines="1"
                         android:textColor="?attr/title_color"
-                        android:textSize="@dimen/detail_rail_episode_title" />
+                        android:textSize="@dimen/header_title" />
 
 
                 </LinearLayout>
@@ -193,7 +193,7 @@
                     android:fontFamily="@font/sukhumvittadmai_medium"
                     android:text="duration"
                     android:textColor="?attr/cast_text_color"
-                    android:textSize="@dimen/detail_rail_episode_duration"
+                    android:textSize="@dimen/TextSize12"
                     android:visibility="visible" />
 
             </LinearLayout>
@@ -292,12 +292,12 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/rail_top_margin"
             android:ellipsize="end"
-            android:fontFamily="@font/sukhumvittadmai_medium"
+            android:fontFamily="@font/sukhumvittadmai_normal"
             android:lineSpacingExtra="2sp"
-            android:maxLines="2"
             android:paddingLeft="@dimen/rail_top_margin"
+            android:paddingRight="@dimen/rail_top_margin"
             android:textColor="?attr/more_item_text_color"
-            android:textSize="@dimen/detail_rail_episode_desc"
+            android:textSize="@dimen/font_xsmall"
             android:visibility="visible" />
 
     </LinearLayout>
