text changes wip

--- a/app/src/main/res/values-th/arrays.xml
+++ b/app/src/main/res/values-th/arrays.xml
@@ -58,4 +58,12 @@
 
     </string-array>
 
+    <string-array name="gender_array">
+        <item>เพศ</item>
+        <item>ชาย</item>
+        <item>หญิง</item>
+        <item>อื่น ๆ</item>
+
+    </string-array>
+
 </resources>
