--- a/app/src/main/res/layout/activity_content_preference.xml
+++ b/app/src/main/res/layout/activity_content_preference.xml
@@ -51,7 +51,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="20dp"
             android:maxLines="1"
-            android:text="Update Preferences"
+            android:text="@string/change_password"
             android:textSize="@dimen/TextSize16"
             android:fontFamily="@font/sukhumvittadmai_bold"
             android:background="@drawable/rounded_update"
