--- a/app/src/main/res/values-en/arrays.xml
+++ b/app/src/main/res/values-en/arrays.xml
@@ -54,5 +54,12 @@
         <item>Terms and Conditions</item>
         <item>Privacy Policy</item>
     </string-array>
+    <string-array name="gender_array">
+        <item>GENDER</item>
+        <item>MALE</item>
+        <item>FEMALE</item>
+        <item>OTHERS</item>
+
+    </string-array>
 
 </resources>
