--- a/app/src/main/res/values-hi/arrays.xml
+++ b/app/src/main/res/values-hi/arrays.xml
@@ -57,4 +57,12 @@
 
     </string-array>
 
+    <string-array name="gender_array">
+        <item>GENDER</item>
+        <item>MALE</item>
+        <item>FEMALE</item>
+        <item>OTHERS</item>
+
+    </string-array>
+
 </resources>
