--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -63,4 +63,14 @@
         <item>Data Saver</item>
         <item>Always ask</item>
     </string-array>
+
+
+    <string-array name="gender_array">
+        <item>GENDER</item>
+        <item>MALE</item>
+        <item>FEMALE</item>
+        <item>OTHERS</item>
+
+    </string-array>
+
 </resources>
