--- a/app/src/main/res/values-en/arrays.xml
+++ b/app/src/main/res/values-en/arrays.xml
@@ -55,7 +55,7 @@
         <item>Privacy Policy</item>
     </string-array>
     <string-array name="gender_array">
-        <item>GENDER</item>
+        <item>Gender</item>
         <item>MALE</item>
         <item>FEMALE</item>
         <item>OTHERS</item>
