--- a/app/src/main/res/values-hi/arrays.xml
+++ b/app/src/main/res/values-hi/arrays.xml
@@ -58,7 +58,7 @@
     </string-array>
 
     <string-array name="gender_array">
-        <item>GENDER</item>
+        <item>Gender</item>
         <item>MALE</item>
         <item>FEMALE</item>
         <item>OTHERS</item>
