--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -66,7 +66,7 @@
 
 
     <string-array name="gender_array">
-        <item>GENDER</item>
+        <item>Gender</item>
         <item>MALE</item>
         <item>FEMALE</item>
         <item>OTHERS</item>
