--- a/app/src/main/res/layout/activity_sign_up_third_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_third_page.xml
@@ -174,8 +174,8 @@
                             android:layout_marginTop="@dimen/NontonSize10">
 
                             <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="@dimen/splash_logo_height"
+                                android:layout_height="@dimen/splash_logo_height"
                                 android:layout_gravity="center"
                                 android:layout_marginRight="@dimen/NontonSize2"
                                 android:contentDescription="TODO"
