--- a/app/src/main/res/values-th/arrays.xml
+++ b/app/src/main/res/values-th/arrays.xml
@@ -5,6 +5,7 @@
         <item>จัดการโปรไฟล์</item>
         <item>รายการโปรดของฉัน</item>
         <item>ประวัติการรับชม</item>
+        <item>ดาวน์โหลดของฉัน</item>
         <item>ติดต่อเรา</item>
         <item>คำถามที่พบบ่อย</item>
         <item>เกี่ยวกับเรา</item>
@@ -46,6 +47,7 @@
         <item>จัดการโปรไฟล์</item>
         <item>รายการโปรดของฉัน</item>
         <item>ประวัติการรับชม</item>
+        <item>ดาวน์โหลดของฉัน</item>
         <item>ติดต่อเรา</item>
         <item>คำถามที่พบบ่อย</item>
         <item>เกี่ยวกับเรา</item>
