--- a/app/src/main/res/layout/list_download_item.xml
+++ b/app/src/main/res/layout/list_download_item.xml
@@ -134,7 +134,7 @@
                 android:layout_margin="@dimen/NontonSize8"
                 android:visibility='@{downloadStatus==DownloadStatus.DOWNLOADING ? View.VISIBLE : View.GONE, default="gone"}'
                 app:background_progressbar_color="@android:color/darker_gray"
-                app:progressbar_color="@color/blue"
+                app:progressbar_color="@color/description_title_yellow"
                 />
             <ImageView
                 android:layout_width="@dimen/watchListWidth"
