--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,6 +5,7 @@
         <item>Manage Account</item>
         <item>My Watchlist</item>
         <item>My Watch History</item>
+        <item>My Downloads</item>
         <item>Contact Us</item>
         <item>Frequently Ask Questions</item>
         <item>About VIPA</item>
@@ -46,6 +47,7 @@
         <item>Manage Account</item>
         <item>My Watchlist</item>
         <item>My Watch History</item>
+        <item>My Downloads</item>
         <item>Contact Us</item>
         <item>Frequently Ask Questions</item>
         <item>About VIPA</item>
