--- a/brightcovelibrary/src/main/res/drawable/my_downloads_icon_more.xml
+++ b/brightcovelibrary/src/main/res/drawable/my_downloads_icon_more.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="55.72dp"
-    android:height="67.67dp"
-    android:viewportWidth="55.72"
-    android:viewportHeight="67.67">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
 
     <path
-        android:fillColor="#224ba3"
-        android:pathData="M55.72,23.89H39.8V0H15.92V23.89H0L27.87,51.73ZM0,59.7v8H55.72v-8Z" />
+        android:pathData="M0 0h24v24H0z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M16 13h-3V3h-2v10H8l4 4 4-4zM4 19v2h16v-2H4z" />
 </vector>
