--- a/app/src/main/res/layout-sw600dp-land/signup_activity.xml
+++ b/app/src/main/res/layout-sw600dp-land/signup_activity.xml
@@ -323,14 +323,18 @@ android:textColorHint="?attr/app_edit_text_color"
                                 android:textColor="@color/inspection_color"
                                 android:textSize="@dimen/TextSize12"
                                 android:visibility="invisible" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="left"
+                            android:layout_gravity="left">
                             <CheckBox
                                 android:id="@+id/termsText"
 
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:buttonTint="@color/white"
-                                android:layout_gravity="left"
-                                android:layout_marginLeft="@dimen/NontonSize10"
+                                android:layout_gravity="center"
                                 android:layout_marginRight="@dimen/NontonSize10"
                                 android:checked="false"
                                 android:textColor="?attr/app_edit_text_color"
@@ -338,6 +342,7 @@ android:textColorHint="?attr/app_edit_text_color"
                                 android:text="@string/recieve_updates"
                                 android:textSize="@dimen/font_small"
                                 />
+                        </LinearLayout>
                             <LinearLayout
                                 android:id="@+id/llSignUp"
                                 android:layout_width="match_parent"
