--- a/app/src/main/res/layout/row_episode_list.xml
+++ b/app/src/main/res/layout/row_episode_list.xml
@@ -204,6 +204,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:orientation="vertical"
+                android:gravity="center"
                 android:layout_weight="1"
                 android:visibility='@{isDownloadable ? View.VISIBLE : View.GONE,default="visible"}'>
 
@@ -225,7 +226,7 @@
                     android:layout_margin="@dimen/NontonSize8"
                     android:visibility='@{downloadStatus==DownloadStatus.DOWNLOADING ? View.VISIBLE : View.GONE, default="gone"}'
                     app:background_progressbar_color="@android:color/darker_gray"
-                    app:progressbar_color="@color/blue" />
+                    app:progressbar_color="@color/description_title_yellow" />
 
                 <ImageView
                     android:id="@+id/video_downloaded"
